# ETL_weather

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.en.md  README.fr.md  README.md  TROUBLESHOOTING.md  continuous_monitoring.py  docker-compose.prod.yml  docker-compose.yml  historical_weather_example.py  landing_page.html  landing_page_simple.html  landing_page_standalone.html  open_meteo_example.py  serve_landing_page.py  test_connection.html
.github/workflows/: python-package-conda.yml
data/: monitoring_20251207.csv
postgres/: init.sql
python_analytics/: Dockerfile  requirements.txt
python_analytics/app/: __init__.py  alert.py  db.py  routes.py
python_analytics/app/api/: weather_api.py  weather_api.py.backup
python_analytics/app/models/: weather.py
python_analytics/app/services/: aeris_weather_service.py  alert_service.py  database_service.py  open_meteo_service.py  weatherapi_service.py
python_analytics/app/templates/: dashboard.html
python_analytics/app/utils/: config.py
rust_etl/: Cargo.toml  Dockerfile  main.rs
rust_etl/.sqlx/: query-f3175a7da9d6db4910d08db472c3469017fe9427692cf5b21cc59db6fa8d2b99.json  query-fb41dfbb0fa4fde1de4b28f69111eaa4d80b43ca96d357ca45741fd965fdd1b2.json
rust_etl/src/: lib.rs  main.rs
rust_etl/src/config/: app_config.rs
rust_etl/src/models/: mod.rs  weather.rs
rust_etl/src/services/: database.rs  mod.rs  weather_service.rs
rust_etl/src/utils/: logging.rs  mod.rs
scripts/: setup.sh
tests/: test_python_analytics.py  test_weather_api.py
