[package]

name = "rust_etl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"]}
dotenvy = "0.15"
chrono = {version = "0.4", features = ["serde"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
